# pdd-ecommerce-bot

./: .dockerignore  .env.development  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  launch.sh  main.py  nginx.conf  optimization_analysis_report.md  pyproject.toml  pytest.ini  requirements.txt  run_server.py  test_llm.py  worker.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3034b0250668_initial_schema.py  dde5d80cc0c5_add_new_columns.py
config/: pdd_bot_supervisor.conf  settings.py
data/chroma/: chroma.sqlite3
data/knowledge/: 01_pricing.md  02_faq.md  03_scripts.md  04_policy.md
data/prompts/: main.yaml  ppt_consultant.yaml
data/sqlite/: pdd_ecommerce.db  pdd_ecommerce.db-shm  pdd_ecommerce.db-wal
docs/: callback-url-setup.md  design-system.md  pdd-api-authorization.md  recording-checklist.txt
frontend/: .eslintrc.cjs  .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  demoData.js  store.js  style.css
scripts/: advanced_adversarial_eval.py  adversarial_eval.py  adversarial_stress_test.py  auth_notebooklm.py  create_launcher_app.sh  e2e_simulation.py  ecommerce_adversarial_eval.py  extreme_adversarial_eval.py  generate_hash.py  llm_channel_benchmark.py  load_knowledge.py  paid_vs_free_benchmark.py
src/api/: admin.py  dashboard.py  webhook.py  websocket_manager.py
src/core/: __init__.py  chat_service.py  content_guardrail.py  escalation_detector.py  llm_client.py  order_state_machine.py  rag_engine.py  session_manager.py
src/models/: database.py  enums.py
src/services/: db_service.py  message_retry_queue.py  notebooklm_client.py  notebooklm_playwright.py  pdd_api_client.py  redis_client.py  requirement_extractor.py  wecom_client.py  (+1 more)
templates/: admin.html  dashboard.html
tests/: test_api.py  test_core.py  test_llm_client.py  test_rag.py
(+33 files in other folders)
