# ============================================================
#   PDD E-Commerce AI Bot — 统一项目配置
#   集中管理 Ruff (Linter/Formatter) 和 Mypy (类型检查) 规则
# ============================================================

[project]
name = "pdd-ecommerce-bot"
version = "0.2.0"
description = "基于 RAG + LLM + SQLite 的拼多多智能客服系统"
requires-python = ">=3.9"

# ===== Ruff: 超快速的 Python Linter + Formatter =====
# 文档: https://docs.astral.sh/ruff/
[tool.ruff]
target-version = "py39"
line-length = 120
# 排除不需要检查的目录
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    ".git",
    "node_modules",
    "_archived",
    "static",
    "data",
    "logs",
    "*.egg-info",
]

[tool.ruff.lint]
# 启用的规则集：
#   E/W  = pycodestyle (代码风格)
#   F    = pyflakes (常见错误)
#   I    = isort (导入排序)
#   UP   = pyupgrade (旧语法自动升级)
#   B    = flake8-bugbear (常见 Bug 模式)
#   SIM  = flake8-simplify (简化建议)
#   TCH  = flake8-type-checking (类型导入优化)
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

# 忽略的规则（避免初期引入太多噪音）：
ignore = [
    "E501",   # 行长度由 formatter 管，不重复检查
    "B008",   # FastAPI 的 Depends() 默认参数是标准用法
    "B905",   # zip strict 暂不强制
    "SIM108", # 三元表达式不强制
    "UP007",  # X | Y union 语法保留兼容性
]

[tool.ruff.lint.isort]
# 让 isort 知道哪些是项目本地包
known-first-party = ["src", "config"]

[tool.ruff.format]
# 使用双引号（与 Black 默认一致）
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ===== Mypy: 静态类型检查 =====
# 文档: https://mypy.readthedocs.io/
[tool.mypy]
python_version = "3.9"
# 渐进式引入：先不强制所有函数都有类型注解
disallow_untyped_defs = false
# 忽略第三方库的类型缺失（避免大量 import 报错）
ignore_missing_imports = true
# 允许隐式 Optional
no_implicit_optional = false
# 检查赋值时的类型安全
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

# ===== Pytest 配置 =====
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# 默认 verbose 输出
addopts = "-v --tb=short"
# 异步测试支持
asyncio_mode = "auto"
